topページをそれっぽく修正

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,2 +1,12 @@
-<%= link_to '空き家を探す', search_search_path ,class: "btn btn-mini btn-default"%>
-<%= link_to '住んでる街の診断', research_search_path,class: "btn btn-mini btn-default" %>
+<header class="jumbotron">
+  <div class="container">
+    <!-- <h1>Header を作る</h1> -->
+    <br>
+    <br>
+    <p>街に希望の灯をともそう</p>
+    <br>
+    <br>
+    <%= link_to '空き家を探す', search_search_path ,class: "btn btn-white btn-ghost"%>
+    <%= link_to '住んでる街の診断', research_search_path,class: "btn btn-white btn-ghost" %>
+  </div>
+</header>
